Corrected drop down alignment and size.

--- a/mainstyles.css
+++ b/mainstyles.css
@@ -50,8 +50,9 @@ h3 {
 /* The container <div> - needed to position the dropdown content */
 .left_dropdown {
     position: relative;
+    float:left;
     margin-left: 20%;
-    margin-top: 5%;
+
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -85,7 +86,7 @@ h3 {
 .right_dropbtn {
     background-color: lightblue;
     color: red;
-    padding: 16px;
+    padding:12px 30px;
     font-family: blippo, fantasy;
     font-size: 16px;
     border: none;
